[package]
name = "emergency_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
eframe = "0.29.1"
egui = "0.29.1"
epi = "0.17.0"
gui = "0.6.2"
image = "0.25.5"
rdev = "0.5.3"
rfd = "0.15.1"
rodio = "0.20.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.32.0"


